--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="menu__list-links" href="#!">Qo’llanma</a
                     ><a class="menu__list-links" href="#!">Loyihada qatnashih</a
                     ><a class="menu__list-links" href="#!">Jamiyat</a
-                    ><a class="menu__list-links" href="#!">Ishtirok eting</a>
+                    ><a class="menu__list-links" href="http://commonvoice.mozilla.org/uz/">Ishtirok eting</a>
                   </ul>
                 </div>
                 <div class="header__burger">
@@ -44,14 +44,14 @@
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </div>
               <div class="header__content-block">
-                <a class="header__content-text-btn" href="#!"
+                <a class="header__content-text-btn" href="http://commonvoice.mozilla.org/uz/"
                   >Loyihada ishtirok etish
                 </a>
                 <div class="header__content-info">
                   <img
                     class="header__content-img"
                     src="images/telegramm-blue.png"
-                  /><a class="header__content-btn" href="#!">Telegram jamoa</a>
+                  /><a class="header__content-btn" href="https://t.me/joinchat/P84ptL81sN8yNWRi">Telegram jamoa</a>
                 </div>
               </div>
             </div>
@@ -155,7 +155,7 @@
         </div>
       </section>
       <div class="how__block">
-        <a class="how__btn" href="#!">Loyihada ishtirok etish</a>
+        <a class="how__btn" href="http://commonvoice.mozilla.org/uz/">Loyihada ishtirok etish</a>
       </div>
       <section class="how">
        
@@ -329,7 +329,7 @@
             <div class="menu-footer__column">
               <ul class="menu-footer__list">
                 <li>
-                  <a class="menu-footer-block" href="#!">
+                  <a class="menu-footer-block" href="https://github.com/uzbekvoice">
                     <img
                       class="menu-footer-block-img"
                       src="images/github.png"
@@ -338,7 +338,7 @@
                   >
                 </li>
                 <li>
-                  <a class="menu-footer-block" href="#!">
+                  <a class="menu-footer-block" href="https://t.me/joinchat/P84ptL81sN8yNWRi">
                     <img
                       class="menu-footer-block-img"
                       src="images/telegramm.png"
@@ -347,7 +347,7 @@
                   >
                 </li>
                 <li>
-                  <a class="menu-footer-block" href="#!">
+                  <a class="menu-footer-block" href="https://discourse.mozilla.org/c/voice/uz/">
                     <img
                       class="menu-footer-block-img"
                       src="images/mozila.png"
